force-app/main/default/objects/Section__c/Section__c.object-meta.xml
<CustomObject>
    <label>セクション</label>
    <nameField>
        <label>セクション名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>