force-app/main/default/objects/Section__c/fields/del_IsRemoteAccessEnableCHD__c.field-meta.xml
<CustomField>
    <fullName>del_IsRemoteAccessEnableCHD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>（削除）在宅非表示フラグ_社宅D</label>
    <type>Checkbox</type>
</CustomField>