force-app/main/default/objects/Section__c/fields/GenericEmailSignatureApplication__c.field-meta.xml
<CustomField>
    <fullName>GenericEmailSignatureApplication__c</fullName>
    <label>汎用メール署名_申入れ</label>
    <type>TextArea</type>
</CustomField>