force-app/main/default/objects/Section__c/fields/HigherSection__c.field-meta.xml
<CustomField>
    <fullName>HigherSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>上位チーム/セクション</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>セクション</relationshipLabel>
    <relationshipName>Section</relationshipName>
    <type>Lookup</type>
</CustomField>