force-app/main/default/objects/Section__c/fields/SectionId__c.field-meta.xml
<CustomField>
    <fullName>SectionId__c</fullName>
    <externalId>true</externalId>
    <label>セクションID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>