force-app/main/default/objects/Section__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <inlineHelpText>担当オペレータ名を差し込む箇所に、以下の文字列を記載してください。
{{{OperatorName}}}</inlineHelpText>
    <label>署名</label>
    <type>TextArea</type>
</CustomField>