force-app/main/default/objects/Section__c/fields/SignatureAuto__c.field-meta.xml
<CustomField>
    <fullName>SignatureAuto__c</fullName>
    <label>署名（自動）</label>
    <type>TextArea</type>
</CustomField>