force-app/main/default/objects/Section__c/listViews/AcceptQueue_Section.listView-meta.xml
<ListView>
    <fullName>AcceptQueue_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>受付チーム</label>
    <queue>AcceptQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>