force-app/main/default/objects/Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ChargeType__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Fax__c</columns>
    <columns>SectionId__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>