force-app/main/default/objects/Section__c/listViews/CancelApplicationTeam_Section.listView-meta.xml
<ListView>
    <fullName>CancelApplicationTeam_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>解約申入チーム</label>
    <queue>CancelApplicationTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>