force-app/main/default/objects/Section__c/listViews/ChangeGroup_Section.listView-meta.xml
<ListView>
    <fullName>ChangeGroup_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>入替チーム</label>
    <queue>ChangeGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>