force-app/main/default/objects/Section__c/listViews/ConditionChangeQueue_Section.listView-meta.xml
<ListView>
    <fullName>ConditionChangeQueue_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>条件変更チーム</label>
    <queue>ConditionChangeQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>