force-app/main/default/objects/Section__c/listViews/DataManagementQueue_Section.listView-meta.xml
<ListView>
    <fullName>DataManagementQueue_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>データ管理チーム</label>
    <queue>DataManagementQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>