force-app/main/default/objects/Section__c/listViews/FinanceQueue_Section.listView-meta.xml
<ListView>
    <fullName>FinanceQueue_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>経理チーム</label>
    <queue>FinanceQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>