force-app/main/default/objects/Section__c/listViews/RenewalQueue_Section.listView-meta.xml
<ListView>
    <fullName>RenewalQueue_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>更新チーム</label>
    <queue>RenewalQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>