force-app/main/default/objects/Section__c/listViews/TestGroup1_Section.listView-meta.xml
<ListView>
    <fullName>TestGroup1_Section</fullName>
    <filterScope>Queue</filterScope>
    <label>解約精算チーム</label>
    <queue>CancelCalculateTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>